locks_analysis_log/2024-06-18-21-25-33/bcc_trace_locks.30.106226.conn6.log
/virtual/main.c:61:64: error: use of undeclared identifier 'BPF_F_USER_STACKID'; did you mean 'BPF_F_USER_STACK'?
            data_ptr->stack_id = stack_traces.get_stackid(ctx, BPF_F_USER_STACKID);
                                                               ^~~~~~~~~~~~~~~~~~
                                                               BPF_F_USER_STACK
/virtual/include/bcc/bpf.h:6061:2: note: 'BPF_F_USER_STACK' declared here
        BPF_F_USER_STACK                = (1ULL << 8),
        ^
/virtual/main.c:112:64: error: use of undeclared identifier 'BPF_F_USER_STACKID'; did you mean 'BPF_F_USER_STACK'?
            data_ptr->stack_id = stack_traces.get_stackid(ctx, BPF_F_USER_STACKID);
                                                               ^~~~~~~~~~~~~~~~~~
                                                               BPF_F_USER_STACK
/virtual/include/bcc/bpf.h:6061:2: note: 'BPF_F_USER_STACK' declared here
        BPF_F_USER_STACK                = (1ULL << 8),
        ^
/virtual/main.c:163:64: error: use of undeclared identifier 'BPF_F_USER_STACKID'; did you mean 'BPF_F_USER_STACK'?
            data_ptr->stack_id = stack_traces.get_stackid(ctx, BPF_F_USER_STACKID);
                                                               ^~~~~~~~~~~~~~~~~~
                                                               BPF_F_USER_STACK
/virtual/include/bcc/bpf.h:6061:2: note: 'BPF_F_USER_STACK' declared here
        BPF_F_USER_STACK                = (1ULL << 8),
        ^
/virtual/main.c:214:64: error: use of undeclared identifier 'BPF_F_USER_STACKID'; did you mean 'BPF_F_USER_STACK'?
            data_ptr->stack_id = stack_traces.get_stackid(ctx, BPF_F_USER_STACKID);
                                                               ^~~~~~~~~~~~~~~~~~
                                                               BPF_F_USER_STACK
/virtual/include/bcc/bpf.h:6061:2: note: 'BPF_F_USER_STACK' declared here
        BPF_F_USER_STACK                = (1ULL << 8),
        ^
/virtual/main.c:265:64: error: use of undeclared identifier 'BPF_F_USER_STACKID'; did you mean 'BPF_F_USER_STACK'?
            data_ptr->stack_id = stack_traces.get_stackid(ctx, BPF_F_USER_STACKID);
                                                               ^~~~~~~~~~~~~~~~~~
                                                               BPF_F_USER_STACK
/virtual/include/bcc/bpf.h:6061:2: note: 'BPF_F_USER_STACK' declared here
        BPF_F_USER_STACK                = (1ULL << 8),
        ^
/virtual/main.c:316:64: error: use of undeclared identifier 'BPF_F_USER_STACKID'; did you mean 'BPF_F_USER_STACK'?
            data_ptr->stack_id = stack_traces.get_stackid(ctx, BPF_F_USER_STACKID);
                                                               ^~~~~~~~~~~~~~~~~~
                                                               BPF_F_USER_STACK
/virtual/include/bcc/bpf.h:6061:2: note: 'BPF_F_USER_STACK' declared here
        BPF_F_USER_STACK                = (1ULL << 8),
        ^
6 errors generated.
Failed to compile BPF program: Failed to compile BPF module <text>
